feat: create simple flashlight online

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="Flashlight Online">
+    <meta name="keywords" content="Flashlight Online: Just click and select color">
     <meta name="author" content="Mahbub Zulkarnain">
     <meta name="description" content="Free Flashlight Online">
 
